v2.078 03/06/2026
Fix JVM shutdown hang when closing app while connected to OBS.
Only require API key when API is enabled.
Replace trim().isEmpty() with isBlank() (Java 11+ modernization).
Apply pattern matching for instanceof (Java 16+ modernization).
Correct README.md discrepancies vs code.